# rename-github-default-branch

./: MANIFEST.in  README.md  pyproject.toml  rename_github_default_branch.py  setup.py
